[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bagel"
version = "0.1.0"
description = "Bagel VLM model and inference utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "decord==0.6.0",
    "einops==0.8.1",
    "huggingface_hub==0.29.1",
    "matplotlib==3.7.0",
    "numpy==1.24.4",
    "opencv-python==4.7.0.72",
    "pyarrow",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scipy==1.10.1",
    "sentencepiece==0.1.99",
    "torch",
    "torchvision",
    "transformers",
    "accelerate>=0.34.0",
    "wandb",
    "gradio",
    "setuptools",
    "wheel",
    "ninja",
    "bitsandbytes",
    "xlsxwriter",
    "triton; sys_platform != 'win32'",
    "triton-windows; sys_platform == 'win32'"
]

# 只打包 bagel 这个顶层包，里面会自动包含 data/modeling/eval/train
[tool.setuptools.packages.find]
where = ["."]
include = ["bagel*"]
