[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bagel"
version = "0.1.0"
description = "Bagel VLM model and inference utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "decord",
    "einops",
    "huggingface_hub",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pyarrow",
    "PyYAML",
    "requests",
    "safetensors",
    "scipy",
    "sentencepiece",
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "wandb",
    "gradio",
    "setuptools",
    "wheel",
    "ninja",
    "bitsandbytes",
    "xlsxwriter",
    "triton; sys_platform != 'win32'",
    "triton-windows; sys_platform == 'win32'"
]

# 只打包 bagel 这个顶层包，里面会自动包含 data/modeling/eval/train
[tool.setuptools.packages.find]
where = ["."]
include = ["bagel*"]
